noinst_LTLIBRARIES = liblts-lib.la

liblts_lib_la_SOURCES  = bfs_reorder.c
liblts_lib_la_SOURCES += dir-info.c dir-info.h
liblts_lib_la_SOURCES += lts.c lts.h
liblts_lib_la_SOURCES += lts-io.c
liblts_lib_la_SOURCES += lts_print.c
liblts_lib_la_SOURCES += lts-tra-io.c
liblts_lib_la_SOURCES += lts-pg-io.h lts-pg-io.c
liblts_lib_la_SOURCES += lts_uniq.c
liblts_lib_la_SOURCES += lowmem_b.c lowmem_lump.c lowmem_s.c lowmem.h
liblts_lib_la_SOURCES += sigmin-lib.c
liblts_lib_la_SOURCES += rationals.c rationals.h

liblts_lib_la_CPPFLAGS = -I ${top_srcdir}/src $(AM_CPPFLAGS)
