bin_PROGRAMS = ltscmp-one

# ltscmp-one
ltscmp_one_SOURCES   = ltscmp-one.c
ltscmp_one_LDADD     =  ../lts-lib/liblts-lib.la ../lts-io/liblts-io.la
ltscmp_one_LDADD    += ../hre/libhre.la ../libltsmin.la
ltscmp_one_CPPFLAGS  = -I ${top_srcdir}/src $(AM_CPPFLAGS)
ltscmp_one_LDFLAGS   = $(AM_LDFLAGS)
