bin_PROGRAMS = ltsmin-compare

# ltsmin-compare
ltsmin_compare_SOURCES   = ltsmin-compare.c
ltsmin_compare_LDADD     =  ../lts-lib/liblts-lib.la ../lts-io/liblts-io.la
ltsmin_compare_LDADD    += ../hre/libhre.la ../lts-lib/liblts-lib.la
ltsmin_compare_LDADD    += ../util-lib/libutil.la ../ltsmin-lib/libltsmin.la
ltsmin_compare_LDADD    += ../hre-io/libhre-io.la
ltsmin_compare_CPPFLAGS  = $(AM_CPPFLAGS)
ltsmin_compare_LDFLAGS   = $(AM_LDFLAGS)
